--- a/produtos.html
+++ b/produtos.html
@@ -15,78 +15,69 @@
 </head>
  
 <body>
-  <nav>
-   
+  <header>
     <div class="div1">
-
-      <h1><img src="img/Castelo.png"></h1>
+      <img src="img/Castelo.png" />
     </div>
     <div class="logo">
-      <a href="index.html">Castelo Cosmetics</a>
+      <h1>Castelo Cosmetics</h1>
     </div>
- 
-    <ul>
-      <li> <a href="index.html"> Home </a> </li>
-      <li> <a href="sobre.html"> Sobre </a> </li>
-      <li> <a href="produtos.html"> Produtos </a> </li>
-      <a></a>
 
-    </ul>
-  </nav>
+    <div class="menu">
+      <ul>
+        <td>
+          <button><a href="index.html"> Home </a></button>
+        </td>
+        <td>
+          <button><a href="sobre.html"> Sobre </a></button>
+        </td>
+        <td>
+          <button><a href="produtos.html"> Produtos </a></button>
+        </td>
+      </ul>
+      
+    </div>
+  </header>
   <div id="div_fixa"><a href="https://wa.me/5585997323691" target="_blank"> <img src="img/api-whatsapp-site.jpg" width="35"></a></div>
   <div id="div_fixa1"><a href="https://www.instagram.com/coosmeticscastelo/" target="_blank"> <img src="img/instagram-site.png" width="35"></a></div>
   <div id="div_fixa2"><a href="https://www.linkedin.com/groups/9225775/manage/membership/members/" target="_blank"> <img src="img/linkedin-site.png" width="35"></a></div>
   <div id="div_fixa3"><a href="https://g1.globo.com/sc/santa-catarina/especial-publicitario/beauty-care/beauty-care/" target="_blank"> <img src="img/download.png" width="35"></a></div>
 
-  <style type="text/css">
- 
-</style>
-
-  <main>
-
-    <section class="banner03">
-      <section id="produtos">
-        <section class="produto">
+<section class="banner03">
+      <div id="produtos">
+        <div class="produto">
           <img src="img/Locao.webp">
           <p>Loção Hidratante</p>
-        </section>
-        <section class="produto">
+        </div>
+        <div class="produto">
           <img src="img/NIVEA--1-.webp">
           <p>Nivea</p>
-        </section>
-        <section class="produto">
+        </div>
+        <div class="produto">
           <img src="img/prot.webp">
           <p>Protetor Solar Facial</p>
-        </section>
-        <section class="produto">
+        </div>
+        <div class="produto">
           <img src="img/protetor-solar.webp">
           <p>Antioliosidade</p>
-        </section>
-        <section class="produto">
+        </div>
+        <div class="produto">
           <img src="img/serum-antirrugas.webp">
           <p>Serum</p>
-        </section>
-        <section class="produto">
+        </div>
+        <div class="produto">
           <img src="img/serum.webp">
           <p>Serum Ultra-concentrado</p>
-        </section>
-        <section class="produto">
+        </div>
+        <div class="produto">
           <img src="img/gel.webp">
           <p>Gel de Limpeza</p>
-        </section>
-        <section class="produto">
+        </div>
+        <div class="produto">
           <img src="img/cicaplast.webp">
           <p>La Roche-Posay</p>
-        </section>
-
-      </section>
-  </main>
-  <footer>
-
-  </footer>
-  </div>
+        </div>
   </section>
-</div>
 </body>
 
 </html>
