--- a/casoperedido.html
+++ b/casoperedido.html
@@ -49,7 +49,7 @@
                     <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
 
                         <input type=hidden name="orgid" value="00D8V00000294J7">
-                        <input type=hidden name="retURL" value="cadastroconcluido.html">
+                        <input type=hidden name="retURL" value="https://castelo-comestics.netlify.app/cadastroconcluido.html">
 
                         <legend><b>Fórmulário de Clientes</b></legend>
                         <br><br><br>
