--- a/formulario.html
+++ b/formulario.html
@@ -41,7 +41,7 @@
         <div class="box5">
                     <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
                         <input type=hidden name="oid" value="00D8V00000294J7">
-                        <input type=hidden name="retURL" value="cadastroconcluido.html">
+                        <input type=hidden name="retURL" value="https://castelo-comestics.netlify.app/cadastroconcluido.html">
 
                         <legend><b>Fórmulário de Clientes</b></legend>
                         <br><br>
