--- a/cadastroconcluido.html
+++ b/cadastroconcluido.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv='refresh' content='10;url=https://castelo-comestics.netlify.app' />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Raleway:ital,wght@1,100&family=Roboto:ital,wght@1,900&display=swap');
     </style>
