--- a/index.html
+++ b/index.html
@@ -1,78 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Cinzel&family=Raleway:ital,wght@1,100&family=Roboto:ital,wght@1,900&display=swap");
-    </style>
-    <title>Castelo Cosmetics</title>
-    <link rel="stylesheet" href="site.css" />
-  </head>
 
-  <body>
-    <header>
-      <div class="div1">
-        <img src="img/Castelo.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Cinzel&family=Raleway:ital,wght@1,100&family=Roboto:ital,wght@1,900&display=swap");
+  </style>
+  <title>Castelo Cosmetics</title>
+  <link rel="stylesheet" href="site.css" />
+</head>
+
+<body>
+
+  <header>
+    <div class="div1">
+     
+    </div>
+    <div class="logo">
+        <h1>Castelo Cosmetics</h1>
+    </div>
+
+    <div class="menu">
+      <ul>
+      <td><button><a href="index.html"> Home </a></button></td>
+      <td><button><a href="sobre.html"> Sobre </a></button></td>
+      <td><button><a href="produtos.html"> Produtos </a></button></td>
+    </ul>
+  </div>
+  </header>
+
+  <div id="div_fixa">
+    <a href="https://wa.me/5585997323691" target="_blank">
+      <img src="img/api-whatsapp-site.jpg" width="35" /></a>
+  </div>
+  <div id="div_fixa1">
+    <a href="https://www.instagram.com/coosmeticscastelo/" target="_blank">
+      <img src="img/instagram-site.png" width="35" /></a>
+  </div>
+  <div id="div_fixa2">
+    <a href="https://www.linkedin.com/groups/9225775/manage/membership/members/" target="_blank">
+      <img src="img/linkedin-site.png" width="35" /></a>
+  </div>
+  <div id="div_fixa3">
+    <a href="https://g1.globo.com/sc/santa-catarina/especial-publicitario/beauty-care/beauty-care/" target="_blank">
+      <img src="img/download.png" width="35" /></a>
+  </div>
+  <!-- <a href='https://br.freepik.com/fotos-vetores-gratis/flores-pastel'>Flores pastel vetor criado por pikisuperstar - br.freepik.com</a> -->
+  <style type="text/css"></style>
+
+  <section class="banner">
+    <div class="texto">
+      <h1 class="titulo">Cadastre-se para receber promoções</h1>
+      <h1 class="titulo">da CASTELO COSMETICS</h1>
+
+      <div class="botoes">
+        <a class="n-overlay" href="saibaMais.html"><button>Saiba Mais</button></a>
+        <button class="overlay">
+          <a href="formulario.html"> Cadastre-se</a>
+        </button>
       </div>
-      <div class="logo">
-          <h1>Castelo Cosmetics</h1>
-      </div>
-
-      <div class="menu">
-        <ul>
-        <td><button><a href="index.html"> Home </a></button></td>
-        <td><button><a href="sobre.html"> Sobre </a></button></td>
-        <td><button><a href="produtos.html"> Produtos </a></button></td>
-      </ul>
     </div>
-    </header>
+  </section>
+</body>
 
-
-    <div id="div_fixa">
-      <a href="https://wa.me/5585997323691" target="_blank">
-        <img src="img/api-whatsapp-site.jpg" width="35"
-      /></a>
-    </div>
-    <div id="div_fixa1">
-      <a href="https://www.instagram.com/coosmeticscastelo/" target="_blank">
-        <img src="img/instagram-site.png" width="35"
-      /></a>
-    </div>
-    <div id="div_fixa2">
-      <a
-        href="https://www.linkedin.com/groups/9225775/manage/membership/members/"
-        target="_blank"
-      >
-        <img src="img/linkedin-site.png" width="35"
-      /></a>
-    </div>
-    <div id="div_fixa3">
-      <a
-        href="https://g1.globo.com/sc/santa-catarina/especial-publicitario/beauty-care/beauty-care/"
-        target="_blank"
-      >
-        <img src="img/download.png" width="35"
-      /></a>
-    </div>
-    <!-- <a href='https://br.freepik.com/fotos-vetores-gratis/flores-pastel'>Flores pastel vetor criado por pikisuperstar - br.freepik.com</a> -->
-    <style type="text/css"></style>
-
-    <section class="banner">
-      <div class="texto">
-        <h1 class="titulo">Cadastre-se para receber promoções</h1>
-        <h1 class="titulo">da CASTELO COSMETICS</h1>
-
-        <div class="botoes">
-          <a class="n-overlay" href="saibaMais.html"
-            ><button>Saiba Mais</button></a
-          >
-          <button class="overlay">
-            <a href="formulario.html"> Cadastre-se</a>
-          </button>
-        </div>
-      </div>
-    </section>
-  </body>
 </html>
