--- a/produtos.html
+++ b/produtos.html
@@ -15,29 +15,24 @@
 </head>
  
 <body>
-  <header>
-    <div class="div1">
-      <img src="img/Castelo.png" />
-    </div>
-    <div class="logo">
-      <h1>Castelo Cosmetics</h1>
-    </div>
 
-    <div class="menu">
-      <ul>
-        <td>
-          <button><a href="index.html"> Home </a></button>
-        </td>
-        <td>
-          <button><a href="sobre.html"> Sobre </a></button>
-        </td>
-        <td>
-          <button><a href="produtos.html"> Produtos </a></button>
-        </td>
+    <header>
+      <div class="div1">
+       
+      </div>
+      <div class="logo">
+          <h1>Castelo Cosmetics</h1>
+      </div>
+  
+      <div class="menu">
+        <ul>
+        <td><button><a href="index.html"> Home </a></button></td>
+        <td><button><a href="sobre.html"> Sobre </a></button></td>
+        <td><button><a href="produtos.html"> Produtos </a></button></td>
       </ul>
-      
     </div>
-  </header>
+    </header>
+
   <div id="div_fixa"><a href="https://wa.me/5585997323691" target="_blank"> <img src="img/api-whatsapp-site.jpg" width="35"></a></div>
   <div id="div_fixa1"><a href="https://www.instagram.com/coosmeticscastelo/" target="_blank"> <img src="img/instagram-site.png" width="35"></a></div>
   <div id="div_fixa2"><a href="https://www.linkedin.com/groups/9225775/manage/membership/members/" target="_blank"> <img src="img/linkedin-site.png" width="35"></a></div>
